# aicam

./: .gitignore  CMakeLists.txt  README.md  camera_config.cc  camera_config.h  class_prototypes.h  emqt_run.bat  grpc_client.cpp  http_web copy.cpp  http_web.cpp  idf_component.yml  main.cpp  main_02.cpp  main_03.cpp  main_04mqtt.cpp  main_mqtt.cpp  model_data.cc  model_data.h  mqtt_upload.cc  mqtt_upload.h  partitions.csv  run_inference.cc  run_inference.h  sdkconfig  sdkconfig.old  tflite_model.cc  tflite_model.h  web_server.cc  wifi_apsta.cpp  wifi_config.cc  wifi_config.h  植物生长阶段优化策略.pptx
main/: CMakeLists.txt  CMakeLists.txto  camera_config.cc  camera_config.h  cin_web.cc  class_prototypes2.h  classifier.cc  classifier.h  classifier_storage.cc  classifier_storage.h  config_camera.cc  config_camera.h  config_mqtt.cc  config_mqtt.cpp  config_mqtt.h  config_stream.cc  config_stream.cpp  config_web.cpp  config_wifi.cc  config_wifi.h  encoder_model.tflite  fisher_mqtt.cc  fl_dt.cc  grpc_client.cpp  http_web.cpp  image_provider.cc  img_inference.cc  img_inference.h  infer_esp32_lstm_lll.cc  main_04mqtt.cpp  main_grpc_client.cpp  main_lll.cpp  main_mqtt.cpp  main_wifi_apsta.cpp  model_data.cc  model_data.h  model_pb_handler.c  model_pb_handler.cc  model_pb_handler.h  mqtt_ewc.cc  (+16 more)
main/fed_server/: emqx_manager.ipynb  emqx_manager.py  environment.yml
main/fed_server/cloud_models/: emqx_manager.py  encoder_model.h5  encoder_model.tflite  encoder_model_float.h  encoder_model_float.tflite  infer_meta.py  meta_train.py  proto_encoder.h5  proto_encoder.tflite  simu_data.py  tent_mqtt.py
main/fed_server/feder/: MqttClientServer.py  mock_server.py  model.proto  mqtt_client_server.py  plot_results.py  run_grpc_mqtt_server.ipynb  run_grpc_mqtt_server.py  server_esp32.py  test_client2.py  test_on_message.py  train.py  utils.py
main/fed_server/feder/.ipynb_checkpoints/: run_grpc_mqtt_server-checkpoint.ipynb  run_grpc_mqtt_server-checkpoint.py
main/fed_server/federated_cifar/: DataLoader.py  DataPipeLine.py  DataSaver.py  DataViewer.py  ESP32DataLoader.py  ESP32DataPipeLine.py  LeamPipeLine.py  client.py  encoder_model.tflite  flwr_pub.py  meta_train.py  model.proto  model_pb2.py  model_pb2_grpc.py  my_load.py  restore_env.py  run_feder_server.py  run_grpc_mqtt_server.ipynb  run_grpc_mqtt_server.py  server.py  server_h5.py  test_client.py  test_client2.py  train.py  utils.py
main/fed_server/federated_cifar/.ipynb_checkpoints/: run_grpc_mqtt_server-checkpoint.ipynb  run_grpc_mqtt_server-checkpoint.py
main/fed_server/federated_cifar/data/: client_002_20250808_201813.h5  client_002_20250808_203122.h5  client_002_20250808_204215.h5  client_002_20250808_205927.h5  client_002_20250808_211815.h5  client_002_20250808_212548.h5  client_002_20250808_213750.h5  client_002_20250808_213857.h5  client_002_20250808_215709.h5  esp32_001_20250808_111635.h5  esp32_001_20250808_112949.h5  esp32_001_20250808_113340.h5  esp32_001_20250808_113544.h5  esp32_001_20250808_113651.h5  esp32_001_20250808_113832.h5  esp32_001_20250808_163643.h5  esp32_001_20250808_165350.h5  esp32_001_20250808_165451.h5  esp32_001_20250808_165637.h5
main/fed_server/fl_distill/: client.py  client_student.py  dt_logit.py  export_student_for_esp32.py  kd_server.py  kd_server_label.py  readme.txt  server.py  server_teacher.py  server_teacher_kd.py  soft_kd.py  soft_label_distill_tf.py  student_distill.py  student_distill_from_softlabels.py  teacher_softlabel.py  teacher_softlabel_tflite.py  test_cash_kd.py  test_catch_kd2.py  view_nmpy.py
main/fed_server/fl_distill/kd_out/: student_kd_fp32.tflite
main/fed_server/fl_distill/teacher_saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
main/fed_server/lab/: infer_meta.py  smartagri.py  tent_mqtt.py
main/fed_server/lstm/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  classifier.tflite  fish_class3.py  lll_hvac.ipynb  lll_train.ipynb  lstm_encoder.tflite  lstm_encoder_contrastive.tflite  lstm_encoder_contrastive_int8.tflite  main_train_lll_fisher_online.ipynb  main_train_lll_fisher_online.py  meta_lstm_classifier.tflite  meta_model_lstm.tflite  meta_pipeline_fixed.py  reptile_meta_hvac_unsupervised.py  sensor_server.ipynb  sensor_server.py  simu_3class_data.py  simu_data.py  simu_vpd_ph.ipynb  simulation.ipynb  test_anchor_postive.ipynb  train_fomaml_lstm_classifier.py  train_lll_fisher.ipynb  train_lll_fisher_online.ipynb  train_meta_ewc_lll.py  train_meta_fomaml_lstm_classifier.py  train_meta_s_flwr.py  trainable_layers_20250821_074445.txt  trainable_layers_20250821_075012.txt  trainable_layers_20250821_082807.txt  trainable_layers_20250821_123513.txt  trainable_tensor_indices.h  utils.py
main/fed_server/lstm/.ipynb_checkpoints/: Untitled2-checkpoint.ipynb  fisher_class3-checkpoint.ipynb  infer_esp32_lstm_lll-checkpoint.c  lll_hvac-checkpoint.ipynb  lll_train-checkpoint.ipynb  main_train_lll_fisher_online-checkpoint.ipynb  main_train_lll_fisher_online-checkpoint.py  meta_hvac_flowering_focus-checkpoint.py  run_lstm_contrast-checkpoint.py  sensor_server-checkpoint.py  simu_3class_data-checkpoint.py  simu_vpd_ph-checkpoint.ipynb  simulation-checkpoint.ipynb  (+8 more)
main/fed_server/mylab/: gen_newleaf.py  run_flwr_cifar.py  simu_sprouts_data.py  utils.py
main/fed_server/script/: auto_deploy_docker_gpu.ps1  docker_jupyter.ps1  docker_readme.txt  dockerfile  fix_numpy_tensor.py  flwr_requirements.txt  install-docker-gpu-full-mount.ps1  lab_requirements.txt  python_env_dockerfile  remove-conda-env.ps1  remove_xla_ops.py  requirements.txt  setup_envs.bat  setup_flwr_tensorflow_envs.bat
main/fed_server/vit/: best_model.h5  environment.yml  esp32_infer.py  esp_test.py  model_check_point.py  requirements.txt  student_encoder.h5  student_end2end.h5  student_fp32.tflite  student_int8.tflite  test_gpu.py  test_hub_load.py  tf_model_check.py  utils.py  veiw_version.py  vit_esp32_td.py  vit_esp32_td_224.py  vit_kd.py  vit_model_tflite.py  vit_samll_model_tflite.py  vit_sprouts_data.py
main/web_content/: http_web.c
proto/: model.pb.c  (+1 more)
(+89 files in other folders)
